# racing-game-Cpp-SFML

./: .gitignore  CMakeLists.txt  README.md  test.txt
src/: configuration.hpp  elements.cpp  elements.hpp  events.cpp  gameFunctions.cpp  gameFunctions.hpp  keyControls.cpp  keyControls.hpp  main.cpp  stars.hpp  tgui.cpp
